--- a/web/test/src/UI/Card/Card.module.css
+++ b/web/test/src/UI/Card/Card.module.css
@@ -1,8 +1,12 @@
 .card {
   background: white;
-  /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);*/
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.10);
   border: solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 10px 10px 10px 10px;
-  margin: 5px 5px 5px 5px;
+  margin: 15px 15px 15px 15px;
+  width: 270px;
+  height: 270px;
+
+  display: flex;
 }
