홈페이지 업데이트

--- a/web/test/src/components/HomePage/good.module.css
+++ b/web/test/src/components/HomePage/good.module.css
@@ -11,6 +11,9 @@
   }
 
   .good{
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+  }
+
+  .nice{
+    text-align: center;
   }
